<resources>
    <string name="app_name">Phone Repair Store Manager</string>
    <string name="button_addStore">Add Store</string>
    <string name="button_deleteStore">Delete Store</string>
    <string name="hint_storeName">Store Name</string>
    <string name="hint_storeDescription">Description of Store</string>
    <string name="title_lastVisitDate">Date of Last Visit:</string>
    <string name="title_rating">Store Rating:</string>
    <string name="menu_addStore">Add</string>
    <string name="menu_cancelStore">Cancel</string>
    <string name="menu_deleteStore">Delete</string>
    <string name="menu_saveStore">Save</string>
    <string name="save_store"> Save Store </string>
    <string name="enter_store_name"> Please enter the Store\'s Name </string>
    <string name="button_addImage"> Add Image </string>
    <string name="select_store_image">Select Image</string>
    <string name="change_store_image">Change Image</string>
    <string name="button_location">Set Location</string>
    <string name="title_activity_map">Map Activity</string>
    <string name="title_activity_store_maps">Map of All Phone Repair Stores</string>
    <string name="name_content_store_maps">Store Name</string>
    <string name="description_content_store_maps">Description</string>
</resources>