<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ie.setu.assignment1.views.store.StoreView">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:fitsSystemWindows="true"
        app:elevation="0dip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleTextColor="@color/colorPrimary" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="408dp"
        android:layout_height="656dp"
        android:layout_below="@id/appBarLayout2"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="600dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <EditText
                android:id="@+id/storeName"
                android:layout_width="365dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:hint="@string/hint_storeName"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.503"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/description"
                android:layout_width="365dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:hint="@string/hint_storeDescription"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/storeName" />

            <TextView
                android:id="@+id/dateText"
                android:layout_width="365dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:text="@string/title_lastVisitDate"
                android:textColor="@color/colorSecondary"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description" />

            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:calendarTextColor="@color/colorPrimaryDark"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                android:ems="10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dateText" />

            <TextView
                android:id="@+id/ratingText"
                android:layout_width="365dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:text="@string/title_rating"
                android:textColor="@color/colorSecondary"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/datePicker" />

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="24dp"
                android:ems="10"
                android:numStars="5"
                android:stepSize="0.5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ratingText" />

            <Button
                android:id="@+id/chooseImage"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/button_addImage"
                app:layout_constraintBottom_toTopOf="@+id/storeImage"
                app:layout_constraintStart_toStartOf="@+id/ratingText"
                app:layout_constraintTop_toBottomOf="@+id/ratingBar"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/storeLocation"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:layout_marginTop="8dp"
                android:text="@string/button_location"
                app:layout_constraintBottom_toTopOf="@+id/storeImage"
                app:layout_constraintEnd_toEndOf="@+id/ratingText"
                app:layout_constraintStart_toEndOf="@+id/chooseImage"
                app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

            <ImageView
                android:id="@+id/storeImage"
                android:layout_width="0dp"
                android:layout_height="300dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.555"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/storeLocation"
                app:layout_constraintVertical_bias="0.060000002"
                app:srcCompat="@drawable/ic_launcher_background" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>